整理依赖包

--- a/dubbo-nacos-consumer/src/main/resources/application.yml
+++ b/dubbo-nacos-consumer/src/main/resources/application.yml
@@ -16,3 +16,7 @@ nacos:
 dubbo:
   registry:
     address: nacos://${nacos.service-address}:${nacos.port}
+  application: # 拒绝远端主机发出的命令，只允许服务本机执行
+    qos-accept-foreign-ip: false
+    qos-enable: true
+    qos-port: 33333
